Set up mono repo with lerna

--- a/packages/scss/package.json
+++ b/packages/scss/package.json
@@ -9,6 +9,7 @@
   "devDependencies": {
     "husky": "^4.2.5",
     "lint-staged": "^10.2.11",
+    "node-sass": "^9.0.0",
     "prettier": "^2.0.5",
     "stylelint": "^13.6.1",
     "stylelint-config-prettier": "^8.0.2",
@@ -16,6 +17,7 @@
     "stylelint-prettier": "^1.1.2"
   },
   "scripts": {
+    "build": "node src/scripts/build.js",
     "lint": "stylelint './**/*.scss'",
     "lint:fix": "yarn lint --fix"
   },
